src/app.css
:root {
	font-family: 'Outfit';
	font-weight: 300;
	font-size: 112.5%;
	flex-shrink: 0;
	--bg-color-1: hsl(200, 17%, 9%);
	--bg-color-1-5: hsl(200, 17%, 10.5%);
	--bg-color-2: hsl(200, 17%, 12%);
	--bg-color-2-5: hsl(200, 17%, 14.5%);
	--bg-color-3: hsl(200, 17%, 17%);
	--bg-color-3-5: hsl(200, 17%, 21.5%);
	--sub-color: hsl(200, 17%, 26%);
	--font-color: hsl(200, 37%, 68%);
	--scrollbar-color: hsla(200, 17%, 12%, 0.5);
}

* {
	box-sizing: border-box;
}

body {
	min-height: 100vh;
	margin: 0;
	background: var(--bg-color-2);
	color: var(--font-color);
}

#svelte {
	min-height: 100vh;
	display: flex;
}

::-webkit-scrollbar {
	width: 7.5px;
}

/* Track */
::-webkit-scrollbar-track {
	background: transparent;
}

/* Handle */
::-webkit-scrollbar-thumb {
	background: var(--bg-color-2);
}

:focus {
	outline: none;
}

input,
button {
	color: inherit;
	font: inherit;
	border: none;
}


input::placeholder {
	color: var(--sub-color);
}

button:hover {
	cursor: pointer;
}

